# constituyentes

chat-elecciones-backend/: Dockerfile  README.md  benchmark_app.sh  docker-compose.yml  pyproject.toml
chat-elecciones-backend/src/: config.py  main.py
chat-elecciones-backend/src/process_pipeline/: conversation.py  generic_transaction.py
chat-elecciones-backend/src/process_pipeline/tools/: feedback.py  fuzzy_matcher.py  sql_execute.py  sql_parser.py
chat-elecciones-backend/src/process_pipeline/transaction_handler/: bandido_chat.py  cheap_bandido_chat.py  dummy_transaction.py  prototype_transaction.py  reutter_transaction.py  semantic_transaction.py
chatbot-elecciones-llmserver/: README.md
chatbot-elecciones-llmserver/Models/LLama/: start_llama_cpp.py
chatbot-elecciones-llmserver/WorkloadHandler/: chat_completions_router.py  completions_router.py  embedings_router.py  workload_handler.py
chatbot-elecciones-middleware/: README.md
chatbot-elecciones-middleware/Middleware/: Middleware_server.py  dependencies.txt
chatbot-elecciones-middleware/Middleware/ChatData/: init_psqldb.py  sql_schema.sql
chatbot-elecciones-middleware/Middleware/ChatData/PSQLDB/: postgresql.conf  postmaster.opts  postmaster.pid
chatbot-elecciones-middleware/Middleware/ChatData/PSQLDB/global/: 1214  1214_vm  1232  (+16 more)
chatbot-elecciones-middleware/Middleware/ProcessPipeline/: Conversation.py  GenericTransaction.py
chatbot-elecciones-middleware/Middleware/ProcessPipeline/Transaction/: BadChat.py  DummyTransaction.py
chatbot-elecciones-middleware/Middleware/Tweets/: upload_tweet.py
(+180 files in other folders)
